--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ dependencies:
 
   font_awesome_flutter: ^8.8.1
 
+  # firebase: ^7.3.0
+
+  # firebase_core: ^0.4.5
+
+  # cloud_firestore: ^0.13.6
+
   flutter:
     sdk: flutter
 
